--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,69 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f4f4;
+  font-family: sans-serif;
+  color: #444;
+  box-sizing: border-box;
+  word-wrap: break-word;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wallet {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 30px;
+  margin: 20px;
+  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 20%);
+}
+
+.wallet .address,
+.balance {
+  background-color: #f5f4f4;
+  padding: 15px;
+  border-radius: 10px;
+  margin-top: 15px;
+  color: #777;
+}
+
+.wallet .icon {
+  margin-right: 10px;
+}
+
+.wallet img {
+  width: 100px;
+  margin-right: 50px;
+}
+
+.blocks {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 30px;
+  margin: 20px;
+  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 20%);
+}
+
+.blocks img {
+  width: 200px;
+  margin-right: 20px;
+}
+
+.blocks .header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+.blocks .header h1 {
+  font-size: 50px;
+}
+
+.block {
+  text-align: center;
+  padding: 20px;
+  background-color: rgb(41, 128, 188, 0.5);
+  border-radius: 10px;
+  margin-bottom: 20px;
+  color: #fff;
 }
