add transaction form

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -85,3 +85,31 @@ body {
   background-color: transparent;
   color: #fff;
 }
+
+.form {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 30px;
+  margin: 20px;
+  text-align: center;
+  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 20%);
+}
+
+.form input {
+  display: block;
+  width: 50%;
+  padding: 10px;
+  margin: auto;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+.form button {
+  background-color: rgba(41, 128, 188, 0.5);
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
