--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,6 +35,16 @@ body {
   margin-right: 50px;
 }
 
+.wallet button {
+  background-color: rgb(41, 128, 188, 0.8);
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
 .blocks {
   background-color: #fff;
   border-radius: 20px;
@@ -105,7 +115,7 @@ body {
 }
 
 .form button {
-  background-color: rgba(41, 128, 188, 0.5);
+  background-color: rgba(41, 128, 188, 0.8);
   color: #fff;
   border: none;
   padding: 10px 20px;
